fix: flex wrap in thread post component

--- a/components/Threads/desktop/ThreadsList.module.scss
+++ b/components/Threads/desktop/ThreadsList.module.scss
@@ -84,6 +84,7 @@
   font-size: 0.85rem;
   width: auto;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: initial;
 
   margin-bottom: 0.3rem;
